--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,11 +1,23 @@
-﻿@page
+﻿
+@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "TravelMania";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!--  different page sections are implemented here -->
 
+<section id="Most-Visited">
+    <div class="text-center">
+        <h1 class="display-4">Most Visited</h1>
+        <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>
+</section>
+
+
+<section id="Testimonials">
+    <div class="text-center">
+        <h1 class="display-4">Testimonials</h1>
+        <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>
+</section>
