--- a/Pages/Shared/_Layout.cshtml.css
+++ b/Pages/Shared/_Layout.cshtml.css
@@ -1,7 +1,4 @@
-﻿/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
+﻿a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
@@ -10,6 +7,11 @@ a.navbar-brand {
 a {
   color: #0077cc;
 }
+
+.active {
+    color: #fff;
+}
+
 
 .btn-primary {
   color: #fff;
@@ -46,4 +48,3 @@ button.accept-policy {
   white-space: nowrap;
   line-height: 60px;
 }
-
