--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,22 +1,51 @@
 ﻿html {
-  font-size: 14px;
+    font-size: 16px;
+    font-weight:100;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background: #000000;
+    font-weight: 100;
+    font-weight:100;
+}
+
+.custom-header {
+    background-image:url('../assets/travel.svg');
+    background-blend-mode: luminosity;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: grayscale(100%);
+    background-size: cover;
+    background-position: center;
+    height:70vh;
+    z-index:1;
+}
+
+.custom-header-overlay {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 1));
+    position: absolute;
+    width:100%;
+    height:100%;
+    z-index:2;
+}
+
+.custom-bold {
+    font-weight: bold;
 }
