--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -37,8 +37,8 @@
 
             <section id="Home">
                 <div class="text-center">
-                    <h1 class="display-1 text-light custom-bold">TravelMania</h1>
-                    <h4 class="display-7 text-light">Plan. Pack. Proceed.</h4>
+                    <h1 class="display-1 text-light custom-bold-head">TravelMania</h1>
+                    <h4 class="display-7 text-light font-weight-bold">Plan. Pack. Proceed.</h4>
                 </div>
             </section>
         </div>
