--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,12 +1,19 @@
 ﻿html {
     font-size: 16px;
-    font-weight:100;
 }
 
 @media (min-width: 768px) {
     html {
         font-size: 16px;
     }
+    .navbar-toggler {
+        float: right;
+    }
+
+    .navbar-collapse {
+        text-align: right;
+    }
+    
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
@@ -21,8 +28,6 @@ html {
 body {
     margin-bottom: 60px;
     background: #000000;
-    font-weight: 100;
-    font-weight:100;
 }
 
 .custom-header {
@@ -46,6 +51,6 @@ body {
     z-index:2;
 }
 
-.custom-bold {
+.custom-bold-head {
     font-weight: bold;
 }
