--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,16 +8,25 @@
 <!--  different page sections are implemented here -->
 
 <section id="Most-Visited">
-    <div class="text-center">
-        <h1 class="display-4">Most Visited</h1>
-        <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="text-left text-light">
+        <h1 class="display-4 custom-bold-sub">Most Visited</h1>
+    </div>
+    <div class="image-container">
+        <div>
+            <img src="https://via.placeholder.com/300" alt="Image 1">
+        </div>
+        <img src="https://via.placeholder.com/300" alt="Image 2">
+        <img src="https://via.placeholder.com/300" alt="Image 3">
+        <img src="https://via.placeholder.com/300" alt="Image 4">
+        <img src="https://via.placeholder.com/300" alt="Image 5">
+        <img src="https://via.placeholder.com/300" alt="Image 6">
     </div>
 </section>
 
 
 <section id="Testimonials">
-    <div class="text-center">
-        <h1 class="display-4">Testimonials</h1>
+    <div class="text-left text-light">
+        <h1 class="display-4 custom-bold-sub">Testimonials</h1>
         <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     </div>
 </section>
