--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <header class="custom-header">
         <div class="custom-header-overlay">
-            <nav class="navbar navbar-expand-lg navbar-toggleable-md navbar-dark box-shadow mb-3">
+            <nav class="navbar navbar-expand-lg navbar-toggleable-md navbar-dark bg-dark bg-opacity-50 mb-5 shadow-lg mb-3">
                 <div class="container">
                     <a class="navbar-brand" asp-area="" asp-page="/Index">TM</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -39,6 +39,14 @@
                 <div class="text-center">
                     <h1 class="display-1 text-light custom-bold-head">TravelMania</h1>
                     <h4 class="display-7 text-light font-weight-bold">Plan. Pack. Proceed.</h4>
+                </div>
+
+                <div class="d-flex justify-content-center align-items-center p-5 m-3">
+                    <form class="col-10 row-md-4 bg-opacity-50">
+                        <input class="form-control custom-placeholder custom-input p-3 bg-info bg-opacity-60 rounded-pill" type="search" placeholder="Enter your dream destination..." aria-label="Search">
+                    </form>
+
+
                 </div>
             </section>
         </div>
