--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,19 +8,37 @@
 <!--  different page sections are implemented here -->
 
 <section id="Most-Visited">
+
     <div class="text-left text-light">
         <h1 class="display-4 custom-bold-sub">Most Visited</h1>
     </div>
-    <div class="image-container">
-        <div>
-            <img src="https://via.placeholder.com/300" alt="Image 1">
+    <div class="horizontal-scrolling">
+        <div class="img-item">
+            <img src="~/assets/dubai.jpg" alt="dubai" class="custom-img">
+            <h4 class="text-light">
+                Dubai
+            </h4>
         </div>
-        <img src="https://via.placeholder.com/300" alt="Image 2">
-        <img src="https://via.placeholder.com/300" alt="Image 3">
-        <img src="https://via.placeholder.com/300" alt="Image 4">
-        <img src="https://via.placeholder.com/300" alt="Image 5">
-        <img src="https://via.placeholder.com/300" alt="Image 6">
+        <div class="img-item">
+            <img src="~/assets/rome.jpg" alt="rome" class="custom-img">
+            <h4 class="text-light">
+                Rome
+            </h4>
+        </div>
+        <div class="img-item">
+            <img src="~/assets/bali.jpg" alt="bali" class="custom-img">
+            <h4 class="text-light">
+                Bali
+            </h4>
+        </div>
+        <div class="img-item">
+            <img src="~/assets/turkey.jpg" alt="turkey" class="custom-img">
+            <h4 class="text-light">
+                Turkey
+            </h4>
+        </div>
     </div>
+
 </section>
 
 
