--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -63,13 +63,24 @@ body {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
 
-.image-container {
+.img-item {
     display: flex;
-    overflow-x: auto;
+    flex-direction:column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
-.image-container img {
-    max-width: 100%;
-    height: auto;
-    flex-shrink: 0;
+.img-item img{
+    height: 100%;
+    width:100%;
+    padding:10px;
+    border-radius:30px;
+}
+
+.horizontal-scrolling {
+    display: flex;
+    overflow: scroll;
+    justify-content: space-around;
+    align-items: center;
 }
