--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="text-left text-light">
         <h1 class="display-4 custom-bold-sub">Most Visited</h1>
     </div>
-    <div class="horizontal-scrolling">
+    <div class="horizontal-container">
         <div class="img-item">
             <img src="~/assets/dubai.jpg" alt="dubai" class="custom-img">
             <h4 class="text-light">
@@ -31,12 +31,6 @@
                 Bali
             </h4>
         </div>
-        <div class="img-item">
-            <img src="~/assets/turkey.jpg" alt="turkey" class="custom-img">
-            <h4 class="text-light">
-                Turkey
-            </h4>
-        </div>
     </div>
 
 </section>
@@ -45,6 +39,41 @@
 <section id="Testimonials">
     <div class="text-left text-light">
         <h1 class="display-4 custom-bold-sub">Testimonials</h1>
-        <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     </div>
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class="active" aria-current="true"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <div class="carousel-card text-center">
+                            Test
+                        </div>
+                    </div>
+                    <div class="carousel-item active">
+                        <div class="carousel-card text-center">
+                            Test2
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-card text-center">
+                            Test3
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+       
 </section>
