--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -40,30 +40,40 @@
     <div class="text-left text-light">
         <h1 class="display-4 custom-bold-sub">Testimonials</h1>
     </div>
-        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div id="myCarousel" class="carousel slide mb-5" data-bs-ride="carousel">
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class="active" aria-current="true"></button>
-                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+                @for (int i = 0; i < 4; i++)
+                    {
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="@i" aria-label="Slide @(i + 1) " class="@(i==0 ? "active" : "")"></button>
+                }
             </div>
+
             <div class="carousel-inner">
-                <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <div class="carousel-card text-center">
-                            Test
+                @for (int i = 0; i < 4; i++)
+                    {
+                        <div class="carousel-item  opacity-80 @(i==0 ? "active" : "")">
+                            <div class="carousel-card text-left">
+                                <h4 class="text-light custom-bold-sub p-0 m-0">
+                                    Farida Moukhtar
+                                </h4>
+                                <div class="row d-inline px-0 mx-0">
+                                    <h6 class="text-light custom-light-sub d-inline m-0 p-0">
+                                        Dubai Trip •
+                                    </h6>
+                                    <div class="d-inline m-0 p-0">
+                                        @for (int j = 0; j < 4; j++)
+                                            {
+                                                <img src="~/assets/star.svg" alt="Star" class="star-icon m-0 p-0" />
+                                            }
+                                    </div>
+                                </div>
+
+                                <h6 class="text-light custom-light-sub px-0 mx-0 my-3">
+                                    "On a recent trip booked through TravelMania, everything went smoothly from start to finish. The flight, accommodations, and tours were exactly as described. The travel agent provided excellent recommendations for local dining and attractions, enhancing the overall experience. "
+                                </h6>
+                            </div>
                         </div>
-                    </div>
-                    <div class="carousel-item active">
-                        <div class="carousel-card text-center">
-                            Test2
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="carousel-card text-center">
-                            Test3
-                        </div>
-                    </div>
-                </div>
+                    }
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
