--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -54,6 +54,10 @@ body {
     font-weight: 500;
 }
 
+.custom-light-sub {
+    font-weight: 200;
+}
+
 .custom-placeholder::placeholder {
     font-style: italic;
 }
@@ -91,7 +95,7 @@ body {
 }
 
 .carousel-item {
-    height: 50vh;
+    height: 55vh;
     width: 100%;
     padding-block: 15px;
 }
@@ -99,10 +103,14 @@ body {
 .carousel-card {
     height: 85%;
     width: 75%;
-    padding: 10px;
-    background-color: grey;
+    padding: 40px;
     margin: auto;
     border-radius: 30px;
-    background: rgb(25,25,24);
-    background: linear-gradient(90deg, rgba(25,25,24,1) 0%, rgba(42,42,42,1) 42%);
+    background-color: rgb(25,25,24);
+    background-image: linear-gradient(90deg, rgba(25,25,24,1) 0%, rgba(42,42,42,1) 42%);
+}
+
+
+.image {
+    height: 1em;
 }
