--- a/wwwroot/index.css
+++ b/wwwroot/index.css
@@ -42,7 +42,9 @@ body {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 1));
     position: absolute;
     width:100%;
-    height:100%;
+    height:90vh;
+    top:0;
+    bottom:0;
     z-index:2;
 }
 
@@ -164,4 +166,14 @@ button.accept-policy {
 
 .custom-dark {
     background-color: #ffffff;
+}
+
+@media only screen and (max-width: 900px) {
+    .custom-header {
+        height: 50vh;
+    }
+
+    .custom-header-overlay {
+        height: 55vh;
+    }
 }
