--- a/wwwroot/index.css
+++ b/wwwroot/index.css
@@ -25,24 +25,25 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Montserrat", sans-serif;
+}
+
 .custom-header {
-    background-image:url('../assets/travel.svg');
+    background-image: url('../assets/travel.svg');
     background-blend-mode: luminosity;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     filter: grayscale(100%);
-    background-size: cover;
-    background-position: center;
-    height:90vh;
-    z-index:1;
+    height: fit-content;
+    z-index: 1;
 }
 
 .custom-header-overlay {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 1));
-    position: absolute;
     width:100%;
-    height:90vh;
+    height:fit-content;
     top:0;
     bottom:0;
     z-index:2;
@@ -93,19 +94,18 @@ body {
     overflow: scroll;
     justify-content: space-around;
     align-items: center;
-    margin-block:40px;
 }
 
 .carousel-item {
     height: 55vh;
     width: 100%;
     padding-block: 15px;
+    position: relative;
 }
 
 .carousel-card {
-    height: 47vh;
+    height: 80%;
     width: 75%;
-    padding: 40px;
     margin: auto;
     border-radius: 30px;
     background-color: rgb(25,25,24);
@@ -169,22 +169,13 @@ button.accept-policy {
 }
 
 @media only screen and (max-width: 900px) {
-    .custom-header {
-        height: 40vh;
-    }
 
     .custom-header-overlay {
         height: 45vh;
     }
 
     .carousel-item {
-        height: 30vh;
-        margin-bottom: 8vh;
-    }
-
-    .carousel-card {
-        height: 28vh;
-        margin-bottom:5vh;
+        height: 50vh;
     }
 
 }
