--- a/wwwroot/index.css
+++ b/wwwroot/index.css
@@ -27,12 +27,14 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: "Montserrat", sans-serif;
+    text-shadow: 2px 2px 10px #000000;
 }
 
 .custom-header {
-    background-image: url('../assets/travel.svg');
+    background-image: url('../assets/travel.webp');
     background-blend-mode: luminosity;
     background-position: center;
+    background-position-y:bottom;
     background-repeat: no-repeat;
     background-size: cover;
     filter: grayscale(100%);
