--- a/wwwroot/index.css
+++ b/wwwroot/index.css
@@ -31,24 +31,33 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .custom-header {
-    background-image: url('../assets/travel.webp');
-    background-blend-mode: luminosity;
-    background-position: center;
-    background-position-y:bottom;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: grayscale(100%);
-    height: fit-content;
-    z-index: 1;
+    filter:grayscale(100%);
 }
 
-.custom-header-overlay {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 1));
-    width:100%;
-    height:fit-content;
-    top:0;
-    bottom:0;
-    z-index:2;
+.custom-main {
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0% ,rgba(0, 0, 0, 1) 40%);
+    position: absolute;
+    width: 100%;
+    height: fit-content;
+    min-height: 50vw;
+    top: 0;
+    bottom: 0;
+    z-index: 2;
+}
+
+
+.custom-header-bg {
+    background-image: url('../assets/travel.webp');
+    filter: grayscale(100%);
+    background-position: top;
+    background-position-y: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 70vh;
+    top: 0;
+    position: relative;
+    z-index: 1;
 }
 
 .custom-bold-head {
@@ -76,8 +85,8 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     flex-direction:column;
     align-items: center;
-    height: 100%;
-    width: 100%;
+    width: 30vw;
+    height:33vw;
 }
 
 .img-item img{
@@ -176,8 +185,9 @@ button.accept-policy {
         height: 45vh;
     }
 
-    .carousel-item {
-        height: 50vh;
+    .custom-header-bg {
+        height: 150vh;
+        background-image: url('../assets/travelMobile.webp');
     }
 
 }
