--- a/wwwroot/index.css
+++ b/wwwroot/index.css
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     width: 100%;
     height: fit-content;
-    min-height: 50vw;
+    min-height: 70vh;
     top: 0;
     bottom: 0;
     z-index: 2;
@@ -50,11 +50,10 @@ h1, h2, h3, h4, h5, h6 {
     background-image: url('../assets/travel.webp');
     filter: grayscale(100%);
     background-position: top;
-    background-position-y: bottom;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 70vh;
+    height: 100vh;
     top: 0;
     position: relative;
     z-index: 1;
@@ -186,8 +185,19 @@ button.accept-policy {
     }
 
     .custom-header-bg {
-        height: 150vh;
+        height: 100vh;
         background-image: url('../assets/travelMobile.webp');
+    }
+
+    .carousel-item {
+        height: 20rem;
+        width: 100%;
+        padding-block: 15px;
+        position: relative;
+    }
+
+    .custom-main {
+        background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%,rgba(0, 0, 0, 1) 60%);
     }
 
 }
